samples/_failures_safe/1761406705_3cea4c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7a6541b.c: In function ‘graph_destroy’:
./samples/SAFE/__tmp_c7a6541b.c:170:20: error: expected ‘,’ or ‘;’ at end of input
  170 |             struct GraphEdge *next_edge = edge
      |                    ^~~~~~~~~
./samples/SAFE/__tmp_c7a6541b.c:170:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c7a6541b.c:170:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c7a6541b.c:170:20: error: expected declaration or statement at end of input
